--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,7 @@
 # SQLite version 3.x
 #   gem install sqlite3-ruby (not necessary on OS X Leopard)
 development:
-  adapter: mysql2
+  adapter: mysql
   database: punchbowl_dev
   username: root
   password:
@@ -11,14 +11,14 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test: &test
-  adapter: mysql2
+  adapter: mysql
   database: punchbowl_test
   username: root
   password:
   host: localhost
 
 production:
-  adapter: mysql2
+  adapter: mysql
   database: punchbowl
   username: root
   password:
